src/objects/Deskcom__Case__c.object
<CustomObject>
    <fields>
        <fullName>Deskcom__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account related to the Contact associated with this Desk.com case.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Desk.com Cases</relationshipLabel>
        <relationshipName>Desk_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deskcom__Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deskcom__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact related to the Desk.com case. This field is not designed for editing within Salesforce – Any change will be local to SalesForce and will not be pushed back to Desk.com.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Desk.com Cases</relationshipLabel>
        <relationshipName>Desk_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deskcom__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lead related to this Desk.com case.</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Desk.com Cases</relationshipLabel>
        <relationshipName>Desk_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deskcom__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Opportunity related to this Desk.com case.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Desk.com Cases</relationshipLabel>
        <relationshipName>Desk_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deskcom__case_id__c</fullName>
        <description>Internal Desk.com Ticket ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Internal Desk.com Ticket ID</inlineHelpText>
        <label>Desk.com Ticket ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deskcom__case_url__c</fullName>
        <inlineHelpText>URL for case within Desk.com. This field is not designed for editing within Salesforce – Any change will be local to SalesForce and will not be pushed back to Desk.com.</inlineHelpText>
        <label>Case URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deskcom__channel__c</fullName>
        <inlineHelpText>Channel (email, twitter, facebook) from which the case originated. This field is not designed for editing within Salesforce – Any change will be local to SalesForce and will not be pushed back to Desk.com.</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deskcom__created_at__c</fullName>
        <inlineHelpText>Desk.com case creation date. This field is not designed for editing within Salesforce – Any change will be local to SalesForce and will not be pushed back to Desk.com.</inlineHelpText>
        <label>(Desk.com) Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deskcom__display_id__c</fullName>
        <description>Visual identifier for the Desk.com case.</description>
        <inlineHelpText>This field is not designed for editing within Salesforce – Any change will be local to SalesForce and will not be pushed back to Desk.com.</inlineHelpText>
        <label>Case #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deskcom__priority__c</fullName>
        <inlineHelpText>Desk.com priority level for this case.</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deskcom__status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deskcom__subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deskcom__updated_at__c</fullName>
        <inlineHelpText>Timestamp of the last update of this case.</inlineHelpText>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <label>Desk.com Case</label>
    <listViews>
        <fullName>Deskcom__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Heading</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Desk.com Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>